# downloader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: DEVELOPMENT.md  README.md
src/: lib.rs  main.rs
src/cli/: args.rs  interface.rs  mod.rs
src/config/: mod.rs  settings.rs
src/downloader/: chunk.rs  manager.rs  mod.rs  progress.rs
src/error/: mod.rs  types.rs
src/extractor/: format.rs  mod.rs  youtube.rs
src/file_system/: mod.rs  organizer.rs  resume.rs
src/models/: download.rs  format.rs  mod.rs  video.rs
src/ui/: mod.rs  progress_bar.rs  selection.rs
src/utils/: mod.rs  networking.rs  validation.rs
tests/integration/: cli_tests.rs  download_tests.rs  extractor_tests.rs  mod.rs
tests/unit/: format_tests.rs  mod.rs  validation_tests.rs
