[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

authors = ["Mohammad Ali Alaawar <m.alialaawar@gmail.com>"]
description = "High-performance YouTube video downloader CLI tool"
license = "MIT"
repository = "https://github.com/MhaamadAli/downloader"

[[bin]]
name = "downloader"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Async runtime and HTTP client
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# Progress bars and terminal UI
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
dirs = "5.0"

# Configuration management
confy = "0.5"

# Regular expressions for URL validation
regex = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "2.0"